[gd_scene load_steps=20 format=2]

[ext_resource path="res://Grafik/Assets/Dachboden/Module/module.png" type="Texture" id=1]
[ext_resource path="res://Grafik/Assets/GUI/arrowUpDown.png" type="Texture" id=2]
[ext_resource path="res://Grafik/Assets/GUI/Modul_frame.png" type="Texture" id=3]
[ext_resource path="res://Grafik/Assets/GUI/cableIcon.png" type="Texture" id=4]
[ext_resource path="res://Szenen/GUI/MenuItemsBar.gd" type="Script" id=5]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=14]
size = 18
font_data = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=16]
size = 18
font_data = SubResource( 15 )

[sub_resource type="Animation" id=3]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 0.5, 46.8505 ),
"update": 0,
"values": [ Vector2( 638, 735 ), Vector2( 638, 671 ) ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.190476, 0.895238, 0.928571 )
colors = PoolColorArray( 0.933333, 0.980392, 0.631373, 1, 0.894118, 0.576471, 0.898039, 1, 0.895786, 0.593659, 0.886692, 1 )

[node name="MenuDown" type="Sprite"]
position = Vector2( 638, 671 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="ArrowUpDown" type="Sprite" parent="."]
visible = false
position = Vector2( 205.5, -25 )
texture = ExtResource( 2 )
flip_v = true

[node name="Cable" type="Sprite" parent="."]
position = Vector2( -162, 4 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Cable"]
visible = false
margin_left = -20.0
margin_top = -60.0
margin_right = 36.0
margin_bottom = -36.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 6 )
text = "Leiter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newCable" type="Control" parent="Cable"]
margin_left = -25.0
margin_top = -24.0
margin_right = 25.0
margin_bottom = 26.0
mouse_default_cursor_shape = 6

[node name="Battery" type="Sprite" parent="."]
position = Vector2( -99, 2 )
rotation = -0.785398
scale = Vector2( 0.8, -0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 48 )

[node name="Label" type="Label" parent="Battery"]
visible = false
margin_left = 19.4455
margin_top = 63.6396
margin_right = 99.4455
margin_bottom = 88.6396
rect_rotation = -45.0
rect_scale = Vector2( 1, -1 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 8 )
text = "Batterie"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="newBattery" type="Control" parent="Battery"]
margin_left = -34.7675
margin_top = 2.76746
margin_right = 15.2325
margin_bottom = 46.7675
rect_rotation = -45.0
mouse_default_cursor_shape = 6

[node name="Lamp" type="Sprite" parent="."]
position = Vector2( -34, 5 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 192, 48, 48, 48 )

[node name="Label" type="Label" parent="Lamp"]
visible = false
margin_left = -23.5955
margin_top = -63.4212
margin_right = 27.4045
margin_bottom = -41.4212
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 10 )
text = "Lampe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newLamp" type="Control" parent="Lamp"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
mouse_default_cursor_shape = 6

[node name="Resistor" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 158, 4 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 96, 48, 48 )

[node name="Label" type="Label" parent="Resistor"]
visible = false
margin_left = -41.7693
margin_top = -62.4997
margin_right = 58.2307
margin_bottom = -40.4997
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 12 )
text = "Widerstand"

[node name="newResistor" type="Control" parent="Resistor"]
margin_left = -25.0
margin_top = -24.0
margin_right = 25.0
margin_bottom = 26.0

[node name="Voltometer" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( 94, 4 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 144, 48, 48, 48 )

[node name="Label" type="Label" parent="Voltometer"]
visible = false
margin_left = -36.7693
margin_top = -62.4997
margin_right = 53.2307
margin_bottom = -40.4997
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 14 )
text = "Voltmeter"

[node name="newVoltometer" type="Control" parent="Voltometer"]
margin_left = -25.0
margin_top = -24.0
margin_right = 25.0
margin_bottom = 26.0
mouse_default_cursor_shape = 6

[node name="Ampermeter" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 30, 4 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 96, 48, 48, 48 )

[node name="Label" type="Label" parent="Ampermeter"]
visible = false
margin_left = -49.0493
margin_top = -62.3355
margin_right = 60.9507
margin_bottom = -40.3355
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 16 )
text = "Amperemeter"

[node name="newAmpermeter" type="Control" parent="Ampermeter"]
margin_left = -25.0
margin_top = -21.2638
margin_right = 25.0
margin_bottom = 28.7362
mouse_default_cursor_shape = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menuUp = SubResource( 3 )

[node name="Arrow" type="Control" parent="."]
margin_left = 193.0
margin_top = -37.0
margin_right = 217.0
margin_bottom = -13.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 30, 4 )
amount = 10
lifetime = 1.5
preprocess = 4.92
speed_scale = 1.12
explosiveness = 0.1
randomness = 0.58
lifetime_randomness = 0.03
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 0.7
scale_amount = 3.0
scale_amount_random = 0.02
color_ramp = SubResource( 4 )
hue_variation = -0.04
hue_variation_random = 0.92

[connection signal="gui_input" from="Cable/newCable" to="." method="_on_newCable_gui_input"]
[connection signal="mouse_entered" from="Cable/newCable" to="." method="_on_newCable_mouse_entered"]
[connection signal="mouse_exited" from="Cable/newCable" to="." method="_on_newCable_mouse_exited"]
[connection signal="gui_input" from="Battery/newBattery" to="." method="_on_newBattery_gui_input"]
[connection signal="mouse_entered" from="Battery/newBattery" to="." method="_on_newBattery_mouse_entered"]
[connection signal="mouse_exited" from="Battery/newBattery" to="." method="_on_newBattery_mouse_exited"]
[connection signal="gui_input" from="Lamp/newLamp" to="." method="_on_newLamp_gui_input"]
[connection signal="mouse_entered" from="Lamp/newLamp" to="." method="_on_newLamp_mouse_entered"]
[connection signal="mouse_exited" from="Lamp/newLamp" to="." method="_on_newLamp_mouse_exited"]
[connection signal="gui_input" from="Resistor/newResistor" to="." method="_on_newResistor_gui_input"]
[connection signal="mouse_entered" from="Resistor/newResistor" to="." method="_on_newResistor_mouse_entered"]
[connection signal="mouse_exited" from="Resistor/newResistor" to="." method="_on_newResistor_mouse_exited"]
[connection signal="gui_input" from="Voltometer/newVoltometer" to="." method="_on_new_Voltometer_gui_input"]
[connection signal="mouse_entered" from="Voltometer/newVoltometer" to="." method="_on_new_Voltometer_mouse_entered"]
[connection signal="mouse_exited" from="Voltometer/newVoltometer" to="." method="_on_new_Voltometer_mouse_exited"]
[connection signal="gui_input" from="Ampermeter/newAmpermeter" to="." method="_on_newAmpermeter_gui_input"]
[connection signal="mouse_entered" from="Ampermeter/newAmpermeter" to="." method="_on_newAmpermeter_mouse_entered"]
[connection signal="mouse_exited" from="Ampermeter/newAmpermeter" to="." method="_on_newAmpermeter_mouse_exited"]
[connection signal="gui_input" from="Arrow" to="." method="_on_Arrow_gui_input"]
